# genann

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  Makefile.in  README.md  configure  configure.ac  example1.c  example2.c  example3.c  example4.c  genann.c  genann.h  genannConfig.h.in  genann_test.c  meson.build  minctest.h  test.c  test_changes.c
doc/: e1.dot
example/: CMakeLists.txt  iris.names  xor.ann
examples/: example1.c  example3.c  example4.c
genann/: CMakeLists.txt
include/: config.h.in
src/: genann.c
test/: CMakeLists.txt
